--- a/styles.css
+++ b/styles.css
@@ -82,76 +82,112 @@ nav {
 }
 
 .bannerText {
-  position: absolute;
   margin-left: 6.6rem;
-  width: 600px;
-  bottom: 14rem;
+  height: 18rem;
+  width: 900px;
+  margin-top: 3rem;
 }
 
 .bannerText > h1 {
   padding-right: 5rem;
-  font-size: 3.9rem;
-  font-weight: 700;
-  color: #0a2046;
+  font-size: 3rem;
+  font-weight: 750;
+  color: #051d44;
+}
+
+.bannerText >h1:nth-child(2){
+  font-size: 2.8rem;
+  padding-right: 2rem;
+  margin-bottom: 2rem;
 }
 
 .bannerText > p {
   font-weight: 700;
-  font-size: 1.4rem;
+  font-size: 1.150rem;
   margin-top: 0.6rem;
   opacity: 0.6;
+  z-index: 1;
+  position: relative;
 }
 
 .bannerBackground {
-  width: 2000px;
+  width: 1200px;
+  margin-top: .5rem;
   height: 90vh;
-  margin-left: 37rem;
+  background-image: url(./image/lance-anderson-QdAAasrZhdk-unsplash-min-qougt4c4n043p23oco8xraar113da44ji2v53p8tm-removebg-preview.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
-.bannerBackground > img {
+.bannerBackground > img{
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .addressInfo {
-  box-shadow: 0.2rem 0.2rem 0.6rem #abaab6;
+  position: relative;
+  z-index: 1;
+  box-shadow: 0.1rem 0.1rem 0.1rem #abaab6;
   /* margin-top: -3rem; */
   background-color: #fff;
-  margin-bottom: 3rem;
+  margin-bottom: 2rem;
   z-index: 1;
+  padding: 2rem;
 }
 
 .infoTab {
-  margin-top: -3rem;
+  margin-top: -4rem;
   /* width: 400px; */
   display: flex;
-  gap: 2rem;
+  gap: 1.5rem;
+  padding-right: 4rem;
   align-items: center;
 }
 
 .infoTab > h6 {
   padding-block: 0.5rem;
-  font-size: 1.4rem;
-  text-transform: capitalize;
+  font-size: 1.15rem;
 }
 
 .infoTab > h6:first-child {
   background-color: #fff;
   padding-inline: 2rem;
+  color: #1b08f3;
+  font-weight: 700;
 }
 
 .infoTab > h6:last-child {
   background-color: transparent;
+  color: #5c5959;
 }
 
-.bottomInfoTabs{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.bottomInfoTabs {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.tabCard > h4{
-    margin-bottom: 1rem;
+.tabCard > h4 {
+  margin-bottom: 1.5rem;
+  font-size: 1.1rem;
+  color: #313131;
+}
+
+.tabCard > h5{
+  font-size: 1.2rem;
+  color: #313131;
+}
+
+.tabCard > button{
+  padding: 1rem 1.7rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  border: none;
+  color: #fff;
+  border-radius: 3px;
+  background-color: #1b08f3;
 }
 
 .houseLocation {
